--- a/config.gradle
+++ b/config.gradle
@@ -1,9 +1,10 @@
 def supportVersion = "25.3.1"
-def butterKnifeVersion = "8.6.0"
+def butterKnifeVersion = "8.7.0"
 def dagger2Version = "2.11"
 def rxBindingVersion = "2.0.0"
 def leakCanaryVersion = "1.5.1"
 def blockCanaryVersion = "1.5.0"
+def glideVersion = "4.0.0-RC1"
 
 ext {
 
@@ -44,10 +45,11 @@ ext {
     rxBindingSupportRecyclerView = "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:${rxBindingVersion}"
     rxBindingLeanbackV17 = "com.jakewharton.rxbinding2:rxbinding-leanback-v17:${rxBindingVersion}"
 
-    glide = "com.github.bumptech.glide:glide:3.8.0"
+    glide = "com.github.bumptech.glide:glide:${glideVersion}"
+    glideCompiler = "com.github.bumptech.glide:compiler:${glideVersion}"
 
     //数据库
-    sqlbrite = "com.squareup.sqlbrite:sqlbrite:1.1.1"
+    sqlbrite = "com.squareup.sqlbrite2:sqlbrite:2.0.0"
     //通用适配器
     commonAdapter = "com.classic.adapter:commonadapter:1.8.1"
     //图表控件
@@ -68,8 +70,4 @@ ext {
     //检测UI卡顿
     blockCanaryDebug = "com.github.markzhai:blockcanary-android:${blockCanaryVersion}"
     blockCanaryRelease = "com.github.markzhai:blockcanary-no-op:${blockCanaryVersion}"
-
-    supportTestRunner = "com.android.support.test:runner:0.5"
-    junit = "junit:junit:4.12"
-    truth = "com.google.truth:truth:0.30"
 }
