--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,48 +32,36 @@ android {
         abortOnError false
     }
 }
-configurations.all {
-    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-        def requested = details.requested
-        if (requested.group == 'com.android.support') {
-            if (!requested.name.startsWith("multidex")) {
-                details.useVersion '25.3.1'
-            }
-        }
-    }
-}
+
 dependencies {
-    compile rootProject.ext.supportAppcompatV7
-    compile rootProject.ext.supportDesign
-    compile rootProject.ext.supportCardView
-    compile rootProject.ext.supportRecyclerView
+    implementation rootProject.ext.supportAppcompatV7
+    implementation rootProject.ext.supportDesign
+    implementation rootProject.ext.supportCardView
+    implementation rootProject.ext.supportRecyclerView
 
-    compile rootProject.ext.sqlbrite
-    compile rootProject.ext.basicProject
-    compile rootProject.ext.bottomBar
-    compile rootProject.ext.commonAdapter
-    compile rootProject.ext.materialEditText
-    compile rootProject.ext.materialDialog
-    compile rootProject.ext.materialSpinner
-    compile rootProject.ext.sublimePicker
-    compile rootProject.ext.mpAndroidChart
+    implementation rootProject.ext.sqlbrite
+    implementation rootProject.ext.basicProject
+    implementation rootProject.ext.bottomBar
+    implementation rootProject.ext.commonAdapter
+    implementation rootProject.ext.materialEditText
+    implementation rootProject.ext.materialDialog
+    implementation rootProject.ext.materialSpinner
+    implementation rootProject.ext.sublimePicker
+    implementation rootProject.ext.mpAndroidChart
 
-    compile rootProject.ext.rxJava
-    compile rootProject.ext.rxAndroid
-    compile rootProject.ext.rxBinding
+    implementation rootProject.ext.rxJava
+    implementation rootProject.ext.rxAndroid
+    implementation rootProject.ext.rxBinding
 
-    compile rootProject.ext.glide
-    compile rootProject.ext.butterknife
-    compile rootProject.ext.dagger2
+    implementation rootProject.ext.glide
+    implementation rootProject.ext.butterknife
+    implementation rootProject.ext.dagger2
     annotationProcessor rootProject.ext.butterknifeCompiler
     annotationProcessor rootProject.ext.dagger2Compiler
     annotationProcessor rootProject.ext.glideCompiler
 
-    compile rootProject.ext.umeng
-    compile rootProject.ext.pgyer
-
-    debugCompile rootProject.ext.leakCanaryDebug
-    releaseCompile rootProject.ext.leakCanaryRelease
-    debugCompile rootProject.ext.blockCanaryDebug
-    releaseCompile rootProject.ext.blockCanaryRelease
+    debugImplementation rootProject.ext.leakCanaryDebug
+    releaseImplementation rootProject.ext.leakCanaryRelease
+    debugImplementation rootProject.ext.blockCanaryDebug
+    releaseImplementation rootProject.ext.blockCanaryRelease
 }
