--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.classic.car">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.classic.car"
+    tools:ignore="UnusedAttribute">
 
     <!-- 网络 -->
     <uses-permission android:name="android.permission.INTERNET"/>
