--- a/config.gradle
+++ b/config.gradle
@@ -12,7 +12,7 @@ ext {
             compileSdkVersion: 27,
             buildToolsVersion: "27.0.2",
             applicationId    : "com.classic.car",
-            minSdkVersion    : 14,
+            minSdkVersion    : 16,
             targetSdkVersion : 25,
             versionCode      : 10,
             versionName      : "1.0"
@@ -25,6 +25,8 @@ ext {
     supportCardView = "com.android.support:cardview-v7:${supportVersion}"
     supportRecyclerView = "com.android.support:recyclerview-v7:${supportVersion}"
     supportAnnotations = "com.android.support:support-annotations:${supportVersion}"
+    supportSqlite = 'android.arch.persistence:db:1.0.0'
+    supportSqliteFramework = 'android.arch.persistence:db-framework:1.0.0'
 
     //基础项目
     basicProject = "com.classic.android:rxjava:2.0"
@@ -49,7 +51,9 @@ ext {
     glideCompiler = "com.github.bumptech.glide:compiler:${glideVersion}"
 
     //数据库
-    sqlbrite = "com.squareup.sqlbrite2:sqlbrite:2.0.0"
+    sqlbrite = "com.squareup.sqlbrite3:sqlbrite:2.0.0"
+    sqlbrite3 = "com.squareup.sqlbrite3:sqlbrite:3.0.0"
+
     //通用适配器
     commonAdapter = "com.classic.adapter:commonadapter:1.9"
     //图表控件
@@ -63,6 +67,7 @@ ext {
 
     umeng = "com.umeng.analytics:analytics:latest.integration"
     pgyer = "com.pgyersdk:sdk:2.5.6"
+    bugly = "com.tencent.bugly:crashreport_upgrade:1.3.4"
 
     //检测内存泄漏
     leakCanaryDebug = "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
